src/sass/components/_header.scss
.page-header__container {
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-top: 8px;
  padding-bottom: 0;
  position: absolute;
  left: 50%;
  top: 0;
  transform: translateX(-50%);

  @media screen and (min-width: 768px) {
    padding-top: 32px;
  }
  @media screen and (min-width: 1280px) {
    padding-top: 37px;
  }
}
.header__buy-btn {
  &::after {
    margin-left: 0;
  }

  &:hover,
  &:focus {
    background-color: $button-color-hover;
  }
  @media screen and (min-width: 768px) {
    display: block;
  }
}
.menu-btn {
  border: none;
  background-color: transparent;
  padding: 0;
  display: flex;
  @media screen and (min-width: 768px) {
    margin-right: 32px;
  }
  @media screen and (min-width: 1280px) {
    display: none;
  }
}
.menu-btn__icon {
  fill: $button-color-accent;
  transition: fill $animation;
  .menu-btn:hover &,
  .menu-bnt:focus & {
    fill: $button-color;
  }
}

.header__logo {
  @media screen and (min-width: 768px) and (max-width: 1279.98px) {
    flex-grow: 2;
  }
}

.site-nav {
  &__item {
    padding-left: 20px;
    border-top: 1px solid $border-color-accent;
    &:last-child {
      border-bottom: 1px solid $border-color-accent;
    }
  }
  &__link {
    padding-top: 11px;
    padding-bottom: 11px;
    @include family-vr(inherit, 700, 14px, 1.302);
    font-weight: 700;
    font-size: 14px;
    line-height: 18px;
    display: flex;
    align-items: center;

    color: $text-color-secondary;

    transition: color $animation;

    &:hover,
    &:focus,
    &.current {
      color: $text-color-accent;
    }
  }
}

.header__site-nav {
  @media screen and (max-width: 1279.98px) {
    display: none;
  }
}
.header-site-nav {
  &__list {
    display: flex;
  }
  &__item:not(:last-child) {
    margin-right: 35px;
  }
  &__link {
    @include family-vr(inherit, 700, 16px, 1.302);
  }
}

